# cloudflare_workers_dufs

./: .gitignore  README.md  wrangler.jsonc
.github/workflows/: deploy-dufs-r2.yml
assets/: index.js
src/: server.rs
workers/dufs-r2-worker/: Cargo.toml  README.md  wrangler.toml
workers/dufs-r2-worker/src/: lib.rs
