[package]
name = "dufs-r2-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
js-sys = "0.3"
percent-encoding = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wasm-bindgen = "0.2"
worker = "0.8"
worker-macros = "0.8"
